--- a/horror.html
+++ b/horror.html
@@ -172,7 +172,7 @@ pre code {
 
 
 <pre class="r"><code>movies &lt;- read_csv(here(&quot;horror_movies.csv&quot;))</code></pre>
-<pre><code>## Rows: 4 Columns: 11</code></pre>
+<pre><code>## Rows: 14 Columns: 11</code></pre>
 <pre><code>## ── Column specification ────────────────────────────────────────────────────────
 ## Delimiter: &quot;,&quot;
 ## chr  (1): title
@@ -181,7 +181,7 @@ pre code {
 ## ℹ Use `spec()` to retrieve the full column specification for this data.
 ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.</code></pre>
 <pre class="r"><code>survey &lt;- read_csv(here(&quot;Horror_movie_test.csv&quot;))</code></pre>
-<pre><code>## Rows: 3 Columns: 11</code></pre>
+<pre><code>## Rows: 5 Columns: 11</code></pre>
 <pre><code>## ── Column specification ────────────────────────────────────────────────────────
 ## Delimiter: &quot;,&quot;
 ## chr (11): Timestamp, I enjoy horror movies with a sci-fi element, I enjoy ho...</code></pre>
@@ -233,12 +233,12 @@ for (i in 1:nrow(deviation_df)) {
 
 
 gt(final_df)</code></pre>
-<div id="boijimkgmi" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="aysdonrzrt" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#boijimkgmi .gt_table {
+#aysdonrzrt .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -263,7 +263,7 @@ gt(final_df)</code></pre>
   border-left-color: #D3D3D3;
 }
 
-#boijimkgmi .gt_heading {
+#aysdonrzrt .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -275,7 +275,7 @@ gt(final_df)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#boijimkgmi .gt_title {
+#aysdonrzrt .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -285,7 +285,7 @@ gt(final_df)</code></pre>
   border-bottom-width: 0;
 }
 
-#boijimkgmi .gt_subtitle {
+#aysdonrzrt .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -295,13 +295,13 @@ gt(final_df)</code></pre>
   border-top-width: 0;
 }
 
-#boijimkgmi .gt_bottom_border {
+#aysdonrzrt .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#boijimkgmi .gt_col_headings {
+#aysdonrzrt .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -316,7 +316,7 @@ gt(final_df)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#boijimkgmi .gt_col_heading {
+#aysdonrzrt .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -336,7 +336,7 @@ gt(final_df)</code></pre>
   overflow-x: hidden;
 }
 
-#boijimkgmi .gt_column_spanner_outer {
+#aysdonrzrt .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -348,15 +348,15 @@ gt(final_df)</code></pre>
   padding-right: 4px;
 }
 
-#boijimkgmi .gt_column_spanner_outer:first-child {
+#aysdonrzrt .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#boijimkgmi .gt_column_spanner_outer:last-child {
+#aysdonrzrt .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#boijimkgmi .gt_column_spanner {
+#aysdonrzrt .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -368,7 +368,7 @@ gt(final_df)</code></pre>
   width: 100%;
 }
 
-#boijimkgmi .gt_group_heading {
+#aysdonrzrt .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -390,7 +390,7 @@ gt(final_df)</code></pre>
   vertical-align: middle;
 }
 
-#boijimkgmi .gt_empty_group_heading {
+#aysdonrzrt .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -405,15 +405,15 @@ gt(final_df)</code></pre>
   vertical-align: middle;
 }
 
-#boijimkgmi .gt_from_md > :first-child {
+#aysdonrzrt .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#boijimkgmi .gt_from_md > :last-child {
+#aysdonrzrt .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#boijimkgmi .gt_row {
+#aysdonrzrt .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -432,7 +432,7 @@ gt(final_df)</code></pre>
   overflow-x: hidden;
 }
 
-#boijimkgmi .gt_stub {
+#aysdonrzrt .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -444,7 +444,7 @@ gt(final_df)</code></pre>
   padding-left: 12px;
 }
 
-#boijimkgmi .gt_summary_row {
+#aysdonrzrt .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -454,7 +454,7 @@ gt(final_df)</code></pre>
   padding-right: 5px;
 }
 
-#boijimkgmi .gt_first_summary_row {
+#aysdonrzrt .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -464,7 +464,7 @@ gt(final_df)</code></pre>
   border-top-color: #D3D3D3;
 }
 
-#boijimkgmi .gt_grand_summary_row {
+#aysdonrzrt .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -474,7 +474,7 @@ gt(final_df)</code></pre>
   padding-right: 5px;
 }
 
-#boijimkgmi .gt_first_grand_summary_row {
+#aysdonrzrt .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -484,11 +484,11 @@ gt(final_df)</code></pre>
   border-top-color: #D3D3D3;
 }
 
-#boijimkgmi .gt_striped {
+#aysdonrzrt .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#boijimkgmi .gt_table_body {
+#aysdonrzrt .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -497,7 +497,7 @@ gt(final_df)</code></pre>
   border-bottom-color: #D3D3D3;
 }
 
-#boijimkgmi .gt_footnotes {
+#aysdonrzrt .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -511,13 +511,13 @@ gt(final_df)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#boijimkgmi .gt_footnote {
+#aysdonrzrt .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#boijimkgmi .gt_sourcenotes {
+#aysdonrzrt .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -531,41 +531,41 @@ gt(final_df)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#boijimkgmi .gt_sourcenote {
+#aysdonrzrt .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#boijimkgmi .gt_left {
+#aysdonrzrt .gt_left {
   text-align: left;
 }
 
-#boijimkgmi .gt_center {
+#aysdonrzrt .gt_center {
   text-align: center;
 }
 
-#boijimkgmi .gt_right {
+#aysdonrzrt .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#boijimkgmi .gt_font_normal {
+#aysdonrzrt .gt_font_normal {
   font-weight: normal;
 }
 
-#boijimkgmi .gt_font_bold {
+#aysdonrzrt .gt_font_bold {
   font-weight: bold;
 }
 
-#boijimkgmi .gt_font_italic {
+#aysdonrzrt .gt_font_italic {
   font-style: italic;
 }
 
-#boijimkgmi .gt_super {
+#aysdonrzrt .gt_super {
   font-size: 65%;
 }
 
-#boijimkgmi .gt_footnote_marks {
+#aysdonrzrt .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
@@ -580,14 +580,34 @@ gt(final_df)</code></pre>
     </tr>
   </thead>
   <tbody class="gt_table_body">
+    <tr><td class="gt_row gt_left">It</td>
+<td class="gt_row gt_right">9.0</td></tr>
     <tr><td class="gt_row gt_left">The Ring</td>
-<td class="gt_row gt_right">8.666667</td></tr>
+<td class="gt_row gt_right">9.8</td></tr>
+    <tr><td class="gt_row gt_left">Signs</td>
+<td class="gt_row gt_right">9.8</td></tr>
+    <tr><td class="gt_row gt_left">Cabin in the Woods</td>
+<td class="gt_row gt_right">10.2</td></tr>
+    <tr><td class="gt_row gt_left">A Quiet Place</td>
+<td class="gt_row gt_right">10.8</td></tr>
     <tr><td class="gt_row gt_left">Alien</td>
-<td class="gt_row gt_right">11.333333</td></tr>
+<td class="gt_row gt_right">11.0</td></tr>
+    <tr><td class="gt_row gt_left">The Shining</td>
+<td class="gt_row gt_right">11.0</td></tr>
+    <tr><td class="gt_row gt_left">Insidious</td>
+<td class="gt_row gt_right">11.4</td></tr>
+    <tr><td class="gt_row gt_left">Sinister</td>
+<td class="gt_row gt_right">11.8</td></tr>
     <tr><td class="gt_row gt_left">The Thing</td>
-<td class="gt_row gt_right">12.666667</td></tr>
+<td class="gt_row gt_right">12.0</td></tr>
+    <tr><td class="gt_row gt_left">Midsommar</td>
+<td class="gt_row gt_right">12.4</td></tr>
     <tr><td class="gt_row gt_left">Conjuring</td>
-<td class="gt_row gt_right">12.666667</td></tr>
+<td class="gt_row gt_right">13.8</td></tr>
+    <tr><td class="gt_row gt_left">The Strangers</td>
+<td class="gt_row gt_right">16.0</td></tr>
+    <tr><td class="gt_row gt_left">Saw</td>
+<td class="gt_row gt_right">16.6</td></tr>
   </tbody>
   
   
